--- a/bootecamp-impulso-fullstack-web-developer/introducao-a-criacao-de-websites-com-html5-e-css3/Construindo páginas para internet com Bootstrap/Utilizando Bootestrap na página WEB/index.html
+++ b/bootecamp-impulso-fullstack-web-developer/introducao-a-criacao-de-websites-com-html5-e-css3/Construindo páginas para internet com Bootstrap/Utilizando Bootestrap na página WEB/index.html
@@ -181,5 +181,11 @@
         </div>
       </div>
     </footer>
+
+    <ol>
+      <li>Chia</li><dd>Rico em proteína.</dd>
+      <li>Batata</li><dd>Rico em carboidratos.</dd>
+      <li>Linhaça</li><dd>Rico em ômega-3.</dd>
+      </ol>
   </body>
 </html>
